--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="du4-Q0-thu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Xc-gj-GU4">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -422,7 +422,7 @@
         <!--Login View Controller-->
         <scene sceneID="k9w-Ln-Ufy">
             <objects>
-                <viewController storyboardIdentifier="GZELoginViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ei1-to-oX9" customClass="GZELoginViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GZELoginViewController" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ei1-to-oX9" customClass="GZELoginViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PWB-GB-0lz"/>
                         <viewControllerLayoutGuide type="bottom" id="siz-hL-6sZ"/>
@@ -1041,15 +1041,25 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dby-lb-nj9">
                                 <rect key="frame" x="0.0" y="64" width="320" height="45"/>
                                 <subviews>
-                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation-icon" translatesAutoresizingMaskIntoConstraints="NO" id="6SB-GO-3Wb">
-                                        <rect key="frame" x="20" y="12" width="24" height="24"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GjZ-0r-Zlh">
+                                        <rect key="frame" x="0.0" y="0.0" width="68" height="45"/>
+                                        <subviews>
+                                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation-icon" translatesAutoresizingMaskIntoConstraints="NO" id="6SB-GO-3Wb">
+                                                <rect key="frame" x="20" y="12" width="24" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="24" id="DFo-xG-Ego"/>
+                                                    <constraint firstAttribute="height" constant="24" id="L3T-sj-YL0"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="24" id="DFo-xG-Ego"/>
-                                            <constraint firstAttribute="height" constant="24" id="L3T-sj-YL0"/>
+                                            <constraint firstItem="6SB-GO-3Wb" firstAttribute="top" secondItem="GjZ-0r-Zlh" secondAttribute="top" constant="12" id="VNX-Na-UK4"/>
+                                            <constraint firstAttribute="trailing" secondItem="6SB-GO-3Wb" secondAttribute="trailing" constant="24" id="aPn-pG-BEg"/>
+                                            <constraint firstItem="6SB-GO-3Wb" firstAttribute="leading" secondItem="GjZ-0r-Zlh" secondAttribute="leading" constant="20" id="twz-dd-neR"/>
                                         </constraints>
-                                    </imageView>
+                                    </view>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="50" translatesAutoresizingMaskIntoConstraints="NO" id="QGV-rv-vPK">
-                                        <rect key="frame" x="62" y="0.0" width="190" height="46"/>
+                                        <rect key="frame" x="66" y="0.0" width="186" height="46"/>
                                         <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="zam-QP-S56"/>
@@ -1072,13 +1082,14 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="6SB-GO-3Wb" firstAttribute="top" secondItem="dby-lb-nj9" secondAttribute="top" constant="12" id="1HL-Io-YcN"/>
                                     <constraint firstAttribute="trailing" secondItem="NeT-Hf-MSf" secondAttribute="trailing" constant="5" id="7wA-ej-scP"/>
-                                    <constraint firstItem="QGV-rv-vPK" firstAttribute="leading" secondItem="6SB-GO-3Wb" secondAttribute="trailing" constant="20" id="EVF-zA-yiL"/>
                                     <constraint firstItem="NeT-Hf-MSf" firstAttribute="leading" secondItem="QGV-rv-vPK" secondAttribute="trailing" constant="5" id="L0D-K0-Qol"/>
                                     <constraint firstItem="QGV-rv-vPK" firstAttribute="top" secondItem="dby-lb-nj9" secondAttribute="top" id="SIr-jg-54b"/>
+                                    <constraint firstItem="GjZ-0r-Zlh" firstAttribute="leading" secondItem="dby-lb-nj9" secondAttribute="leading" id="XYD-KR-LZa"/>
                                     <constraint firstItem="NeT-Hf-MSf" firstAttribute="top" secondItem="dby-lb-nj9" secondAttribute="top" id="hh6-ra-7fA"/>
-                                    <constraint firstItem="6SB-GO-3Wb" firstAttribute="leading" secondItem="dby-lb-nj9" secondAttribute="leading" constant="20" id="rRf-Mx-ym6"/>
+                                    <constraint firstItem="GjZ-0r-Zlh" firstAttribute="top" secondItem="dby-lb-nj9" secondAttribute="top" id="hj4-dd-4SP"/>
+                                    <constraint firstItem="QGV-rv-vPK" firstAttribute="leading" secondItem="GjZ-0r-Zlh" secondAttribute="trailing" id="o8v-oJ-i5t"/>
+                                    <constraint firstAttribute="bottom" secondItem="GjZ-0r-Zlh" secondAttribute="bottom" id="qcw-Kg-GZa"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="searching-radius-small" translatesAutoresizingMaskIntoConstraints="NO" id="V8w-vK-5vr">
@@ -1202,7 +1213,7 @@
                     <connections>
                         <outlet property="activateGoozeButton" destination="PH3-zt-MvS" id="i2B-FP-lZ0"/>
                         <outlet property="mapView" destination="1Uq-Kh-1Uj" id="9pU-wk-iT5"/>
-                        <outlet property="navIcon" destination="6SB-GO-3Wb" id="Ts7-6Z-Bwx"/>
+                        <outlet property="navIcon" destination="GjZ-0r-Zlh" id="BBe-LS-xDO"/>
                         <outlet property="searchingRadiusView" destination="V8w-vK-5vr" id="N7s-Em-CBS"/>
                         <outlet property="sliderLabel" destination="NeT-Hf-MSf" id="Qpy-WJ-2BM"/>
                         <outlet property="topControls" destination="dby-lb-nj9" id="UPl-Th-CgH"/>
@@ -1225,7 +1236,7 @@
         <!--Choose Mode View Controller-->
         <scene sceneID="30W-cc-vhp">
             <objects>
-                <viewController storyboardIdentifier="chooseModeViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tCW-re-8dM" customClass="GZEChooseModeViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="chooseModeViewController" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tCW-re-8dM" customClass="GZEChooseModeViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Oim-XG-3UJ"/>
                         <viewControllerLayoutGuide type="bottom" id="8i2-yi-jtN"/>
@@ -1302,10 +1313,75 @@
             </objects>
             <point key="canvasLocation" x="2411.25" y="302.11267605633805"/>
         </scene>
+        <!--Loading View Controller-->
+        <scene sceneID="e1e-aF-P6V">
+            <objects>
+                <viewController modalTransitionStyle="crossDissolve" id="5Xc-gj-GU4" customClass="GZELoadingViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7WQ-AB-J8E"/>
+                        <viewControllerLayoutGuide type="bottom" id="wZF-Rm-FlK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jor-V3-7TK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nl3-QF-WLB">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="oIX-yH-eTt">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    </imageView>
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D36-Fy-qwN">
+                                        <rect key="frame" x="109" y="170.5" width="102" height="170"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gooze-logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="ega-VV-YsP">
+                                                <rect key="frame" x="0.0" y="0.0" width="102" height="105"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" image="gooze-text" translatesAutoresizingMaskIntoConstraints="NO" id="Gbf-8b-ktq">
+                                                <rect key="frame" x="0.0" y="105" width="102" height="50"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Gbf-8b-ktq" firstAttribute="top" secondItem="ega-VV-YsP" secondAttribute="bottom" id="A0u-vu-LRd"/>
+                                            <constraint firstItem="Gbf-8b-ktq" firstAttribute="leading" secondItem="D36-Fy-qwN" secondAttribute="leading" id="RZX-To-nva"/>
+                                            <constraint firstAttribute="trailing" secondItem="Gbf-8b-ktq" secondAttribute="trailing" id="W5q-vr-Arw"/>
+                                            <constraint firstItem="ega-VV-YsP" firstAttribute="leading" secondItem="D36-Fy-qwN" secondAttribute="leading" id="Xb2-ZO-b3g"/>
+                                            <constraint firstAttribute="bottom" secondItem="Gbf-8b-ktq" secondAttribute="bottom" multiplier="1.1" id="cFn-ad-HAP"/>
+                                            <constraint firstItem="ega-VV-YsP" firstAttribute="top" secondItem="D36-Fy-qwN" secondAttribute="top" id="vZO-YG-cXr"/>
+                                            <constraint firstAttribute="trailing" secondItem="ega-VV-YsP" secondAttribute="trailing" id="y9j-7Y-mt4"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.094117647060000004" green="0.098039215690000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="oIX-yH-eTt" firstAttribute="leading" secondItem="nl3-QF-WLB" secondAttribute="leading" id="1tr-78-X6O"/>
+                                    <constraint firstItem="D36-Fy-qwN" firstAttribute="centerX" secondItem="nl3-QF-WLB" secondAttribute="centerX" id="3aR-qz-QtN"/>
+                                    <constraint firstAttribute="bottom" secondItem="oIX-yH-eTt" secondAttribute="bottom" id="MFn-tp-i3f"/>
+                                    <constraint firstItem="oIX-yH-eTt" firstAttribute="trailing" secondItem="nl3-QF-WLB" secondAttribute="trailing" id="dIc-ge-dVJ"/>
+                                    <constraint firstItem="oIX-yH-eTt" firstAttribute="top" secondItem="nl3-QF-WLB" secondAttribute="top" id="osh-Y1-p3U"/>
+                                    <constraint firstItem="D36-Fy-qwN" firstAttribute="centerY" secondItem="nl3-QF-WLB" secondAttribute="centerY" multiplier="0.9" id="rsU-h2-m0i"/>
+                                    <constraint firstItem="D36-Fy-qwN" firstAttribute="width" secondItem="oIX-yH-eTt" secondAttribute="width" multiplier="0.32" id="rsg-qJ-e4P"/>
+                                    <constraint firstItem="D36-Fy-qwN" firstAttribute="height" secondItem="oIX-yH-eTt" secondAttribute="height" multiplier="0.3" id="yFD-OU-n8x"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="nl3-QF-WLB" secondAttribute="trailing" id="QD3-TS-QzT"/>
+                            <constraint firstItem="nl3-QF-WLB" firstAttribute="leading" secondItem="jor-V3-7TK" secondAttribute="leading" id="dIU-ND-vzB"/>
+                            <constraint firstAttribute="bottom" secondItem="nl3-QF-WLB" secondAttribute="bottom" id="eTX-xn-WNv"/>
+                            <constraint firstItem="nl3-QF-WLB" firstAttribute="top" secondItem="jor-V3-7TK" secondAttribute="top" id="huh-da-KFl"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a8J-wA-BqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="806" y="-277"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="J4K-6w-nWO">
             <objects>
-                <navigationController storyboardIdentifier="LoginNavController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="du4-Q0-thu" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="LoginNavController" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="du4-Q0-thu" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hex-79-9Ch">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -1323,7 +1399,7 @@
         <!--Navigation Controller-->
         <scene sceneID="PAv-I6-aFy">
             <objects>
-                <navigationController storyboardIdentifier="SearchGoozeNavController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fqh-tX-u5t" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="SearchGoozeNavController" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fqh-tX-u5t" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bat-H4-wgq">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
